--- a/app/src/main/res/drawable/ic_empty_music_foreground.xml
+++ b/app/src/main/res/drawable/ic_empty_music_foreground.xml
@@ -9,7 +9,7 @@
       android:translateX="22.68"
       android:translateY="22.68">
     <path
-        android:fillColor="@android:color/white"
+        android:fillColor="#F4F4FE"
         android:pathData="M12,3v10.55c-0.59,-0.34 -1.27,-0.55 -2,-0.55 -2.21,0 -4,1.79 -4,4s1.79,4 4,4 4,-1.79 4,-4V7h4V3h-6z"/>
   </group>
 </vector>
