--- a/app/src/main/res/layout/fragment_mclist_item.xml
+++ b/app/src/main/res/layout/fragment_mclist_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/parent_hrvv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,44 +17,71 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/reorder"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_alignParentLeft="true"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:scaleType="center"
+            app:srcCompat="@drawable/ic_drag_bar"
+            tools:srcCompat="@drawable/ic_drag_bar" />
+
+        <ImageView
             android:id="@+id/albumArt"
             android:layout_width="55dp"
             android:layout_height="55dp"
-            android:layout_alignParentLeft="true"
             android:padding="1dp"
-            android:src="@mipmap/ic_empty_music" />
+            android:layout_toRightOf="@+id/reorder"
+            android:src="@mipmap/ic_empty_music"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
+            android:layout_toLeftOf="@+id/popup_menu"
             android:layout_toRightOf="@+id/albumArt"
             android:orientation="vertical"
-            android:paddingLeft="12dp"
-            android:paddingTop="7dp">
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp">
 
 
             <TextView
                 android:id="@+id/song_title"
-                style="@style/TextAppearance.AppCompat.Body1"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:singleLine="true"
+                android:textColor="#000000"
                 android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/song_artist"
-                style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:paddingTop="3dp"
                 android:singleLine="true"
+                android:textColor="#99000000"
                 android:textSize="13sp" />
 
 
         </LinearLayout>
+
+
+        <ImageView
+            android:id="@+id/popup_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="8dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:foregroundTint="#434343"
+            android:padding="5dp"
+            android:src="@drawable/ic_more_vert_white_24dp"
+            android:theme="@style/Theme.AppCompat" />
+
 
     </RelativeLayout>
 </com.google.android.material.card.MaterialCardView>
