--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -34,11 +34,11 @@
                     android:id="@+id/player_queue"
                     android:layout_width="68dp"
                     android:layout_height="68dp"
-                    android:padding="20dp"
-                    android:layout_marginTop="4dp"
                     android:layout_alignParentEnd="true"
-                    android:src="@drawable/play_list"
-                    android:layout_alignParentRight="true" />
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="4dp"
+                    android:padding="20dp"
+                    android:src="@drawable/play_list" />
 
             </RelativeLayout>
         </LinearLayout>
